--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#1e88e5">
 <title>DrinkUp</title>
 <style>
 
@@ -261,6 +263,13 @@ showDashboard();
 }
 
 </script>
+    <script>
+if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('service-worker.js');
+}
+</script>
+
 
 </body>
 </html>
+
